# cwms-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .yamllint.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflow_utils/: buildx_services.py
.github/workflows/: CDA-testing.yml  code-check.yml  codeql.yml  deployment.yml  publish-to-test-pypi.yml  pypi-deploy.yml  pypideploy.yml  test-deploy.yml  testing.yml
CWMS/: __init__.py  _constants.py  core.py  cwms_bin_ts.py  cwms_level.py  cwms_loc.py  cwms_text_ts.py  cwms_ts.py  exceptions.py  utils.py
CWMS/.ipynb_checkpoints/: cwms_loc-checkpoint.py  cwms_ts-checkpoint.py  utils-checkpoint.py
CWMSpy/: core.py  cwms_loc.py  cwms_ts.py  utils.py
CWMSpy/.ipynb_checkpoints/: __init__-checkpoint.py
compose_files/keycloak/: realm.json
compose_files/sql/: users.sql
compose_files/tomcat/: logging.properties
cwms/: __init__.py  _constants.py  api.py  core.py  cwms_types.py  exceptions.py  types.py  utils.py
cwms/catalog/: blobs.py  catalog.py  clobs.py
cwms/datafile_imports/: shef_critfile_import.py
cwms/forecast/: forecast_instance.py  forecast_spec.py
cwms/levels/: location_levels.py  specified_levels.py
cwms/location/: group.py
cwms/locations/: gate_changes.py  location_groups.py  physical_locations.py
cwms/measurements/: measurements.py
cwms/outlets/: outlets.py  virtual_outlets.py
cwms/projects/: project_lock_rights.py  project_locks.py  projects.py
cwms/ratings/: ratings.py  ratings_spec.py  ratings_template.py
cwms/standard_text/: standard_text.py
cwms/timeseries/: critscript.py  timerseries_identifier.py  timeseries.py  timeseries_bin.py  timeseries_group.py  timeseries_profile.py  timeseries_profile_instance.py  timeseries_profile_parser.py  timeseries_txt.py
cwms/turbines/: turbines.py
cwms/users/: users.py
cwms/utils/: checks.py
docs/decisions/: 0001-directory-structure.md  0002-code-formatting.md  0003-type-annotations-and-checking.md
examples/: 01_cwms_timeseries_location_examples.ipynb  02_cwms_ratings_examples.ipynb  03_cwms_pandas_data_analysis.ipynb  03_cwms_timeseries_screening.ipynb  04_cwms_timeseries_screening.ipynb  05_cwms_measurements_examples.ipynb  06_cwms_groups_examples.ipynb  07_cwms_users_examples.ipynb  08_cwms_ts_shift_examples.ipynb  cwms_Location_timeseries_examples.ipynb  cwms_bin_ts_examples.py  cwms_level_examples.py  cwms_ratings_examples.ipynb  cwms_text_ts_examples.py  cwms_timeseries_examples.ipynb  cwms_versioned_ts_examples.py  examples.py
examples/forecast/: forecast_instance.ipynb  forecast_spec.ipynb
examples/levels/: location_levels.ipynb  specified_levels.ipynb
examples/locations/: gate_changes.ipynb  physical_locations.ipynb
examples/other/: cwms_token_profile_check.py  cwms_versioned_ts_examples.py
examples/outlets/: outlets.ipynb  virtual_outlets.ipynb
examples/projects/: project_lock_rights.ipynb  (+2 more)
scripts/: README.md  generate_examples.py
tests/: _test_utils.py  api_error_test.py  api_test.py  cwms_bin_ts_test.py  cwms_level_test.py  cwms_text_ts_test.py  exceptions_test.py  types_data_test.py
(+125 files in other folders)
