[tool.poetry]
name = "cwms"
version = "0.1.0"
description = "Corps water managerment systems (CWMS) REST API for Data Retrieval of USACE water data"
readme = "README.md"
license = "LICENSE"
keywords = ["USACE", "water data"]
authors = [
    "Eric Novotny <eric.v.novotny@usace.army.mil>"
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
numpy = "^1.26.4"
requests-toolbelt = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"