[tool.poetry]
name = "cwms-python"
version = "0.5.0"
packages = [
    { include = "cwms" },
]
description = "Corps water managerment systems (CWMS) REST API for Data Retrieval of USACE water data"
readme = "README.md"
license = "LICENSE"
keywords = ["USACE", "water data"]
authors = ["Eric Novotny <eric.v.novotny@usace.army.mil>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.4"
requests-toolbelt = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.2.1.240316"
types-requests = "^2.31.0.20240311"
yamlfix = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.yamlfix]
comments_min_spaces_from_content = 1
whitelines = 1
explicit_start = false
preserve_quotes = true
