[tool.poetry]
name = "cwms-python"
repository = "https://github.com/HydrologicEngineeringCenter/cwms-python"

version = "0.8.1"


packages = [
    { include = "cwms" },
]
description = "Corps water management systems (CWMS) REST API for Data Retrieval of USACE water data"
readme = "README.md"
license = "LICENSE"
keywords = ["USACE", "water data", "CWMS"]
authors = ["Eric Novotny <eric.v.novotny@usace.army.mil>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
requests-toolbelt = "^1.0.0"
requests = "^2.31.0"
# ONLY expects to be installed when the user calls the extras that require it
hecdss  = { version = ">=0.1.24", optional = true }  # Via https://github.com/HydrologicEngineeringCenter/hec-python-library/blob/main/hec/shared.py#L9-10


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.2.1.240316"
types-requests = "^2.31.0.20240311"
yamlfix = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.yamlfix]
comments_min_spaces_from_content = 1
whitelines = 1
explicit_start = false
preserve_quotes = true

[tool.poetry.scripts]
cwms = "cwms.utils.cli.__main__:main"
dss2cwms = "cwms.utils.cli.dss2cwms:main"

[tool.poetry.extras]
cwms = ["cwms-python"]
dss2cwms = ["hecdss", "cwms-python"]
